[package]
name = "qb-tools"
version = "0.1.1"
description = "qBittorrent move and autoremove tools"
edition = "2024"
homepage = "https://github.com/hiddenpdx/qb-tools"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hiddenpdx/qb-tools"

[lib]
name = "qb_move_after_days"
path = "src/lib.rs"

[[bin]]
name = "qb-move-after-days"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
nix = { version = "0.30.1", features = ["fs"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "cookies", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
toml_edit = "0.22.27"

[dev-dependencies]
serde_json = "1.0.145"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
